# dj-htmx-finance

./: .gitignore  manage.py  pyproject.toml  pytest.ini
finance_project/: settings.py
tracker/: factories.py  filters.py  managers.py  models.py  views.py
tracker/management/commands/: generate_transactions.py
tracker/migrations/: 0001_initial.py  0002_category_transaction.py
tracker/templates/tracker/: base.html  index.html  transactions-list.html
tracker/templates/tracker/partials/: transactions-container.html
tracker/tests/: conftest.py  test_models.py  test_views.py
