[project]
name = "dj-htmx-finance"
version = "0.1.0"
description = "A Django-based personal finance tracker with HTMX"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django==4.2",
    "django-allauth==0.54.0",
    "django-debug-toolbar==4.0.0",
    "django-extensions==3.2.1",
    "django-filter==23.2",
    "django-widget-tweaks==1.4.12",
    "Faker==18.6.0",
    "requests==2.29.0",
    "setuptools>=75.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.3",
]

[tool.ruff]
line-length = 88
target-version = "py38"